update chart, report

--- a/App/src/app/containers/default-layout/default-layout.component.html
+++ b/App/src/app/containers/default-layout/default-layout.component.html
@@ -4,7 +4,7 @@
   [navbarBrandFull]="{src: 'assets/img/logo.png', width: 50, height: 25, alt: 'Logo'}"
   [navbarBrandMinimized]="{src: 'assets/img/logo.png', width: 25, height: 25, alt: 'Logo'}"
   [sidebarToggler]="sidebarToggler"
-  [asideMenuToggler]="asideMenuToggler"
+  [asideMenuToggler]="false"
   [mobileAsideMenuToggler]="false"
   [mobileSidebarToggler]='mobileSidebarToggler'
   >
