--- a/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
+++ b/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
@@ -29,6 +29,8 @@
           [allowResizing]='true'
           [showColumnMenu]='true'
           gridLines='Both'
+          [allowSorting]='true'
+
           [pageSettings]='pageSettings'
           [allowExcelExport]='true'
         >
