--- a/App/src/app/views/protect-zone/dashboard/dashboard.component.html
+++ b/App/src/app/views/protect-zone/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
 
   <button class="btn btn-sm btn-secondary mr-3" (click)="reset()"><i class="fa fa-times"></i></button>
 
-  <div class="mr-2">Update per 1 mins </div>
+  <div class="mr-2">Update per 1 min </div>
   <div class="d-flex justify-content-center">
     <div class="form-check">
        <input type="checkbox" (ngModelChange)='onNgModelChangeScanQRCode($event)' [(ngModel)]="auto" class="form-check-input" id="exampleCheck1">
@@ -16,13 +16,9 @@
    </div>
 </div>
 
-<ejs-chart style='display:block;' [chartArea]='chartArea' [width]='width' align='center' id='chartcontainer' [primaryXAxis]='primaryXAxis'
-[primaryYAxis]='primaryYAxis' [title]='title' [palettes]='palette' [tooltip]='tooltip' (load)='load($event)'>
+<ejs-chart style='display:block;'  [chartArea]='chartArea' [width]='width' align='center' id='chartcontainer' [primaryXAxis]='primaryXAxis'
+[primaryYAxis]='primaryYAxis' [title]='title' [palettes]='palette' [tooltip]='tooltip' (load)='load($event)'  (pointRender)='pointRender($event)'>
 <e-series-collection>
-    <e-series [dataSource]='data4' type='Column' xName='x' yName='y' name='SEA Informed' width=3 [marker]='marker'> </e-series>
-    <e-series [dataSource]='data' type='Column' xName='x' yName='y' name='Check In' width=3 [marker]='marker'> </e-series>
-    <e-series [dataSource]='data1' type='Column' xName='x' yName='y' name='Check Out (-)' width=3 [marker]='marker'> </e-series>
-    <e-series [dataSource]='data2' type='Column' xName='x' yName='y' name='Check Out (+)' width=3 [marker]='marker'> </e-series>
-    <e-series [dataSource]='data3' type='Column' xName='x' yName='y' name='Access Control' width=3 [marker]='marker'> </e-series>
+    <e-series [dataSource]='dataSource' type='Column' xName='x' yName='y' name='Workers' width=2 [cornerRadius]='radius' [marker]='marker'> </e-series>
 </e-series-collection>
 </ejs-chart>
