--- a/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
+++ b/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
@@ -4,7 +4,7 @@
     <div class="font-weight-bold px-3">{{'Filter' | translate}}:</div>
     <ejs-datepicker class="pr-3" (change)='startDateOnchange($event)' [(ngModel)]="startDate"></ejs-datepicker>
 
-    <ejs-datepicker class="pr-3" (change)='endDateOnchange($event)' [(ngModel)]="endDate"></ejs-datepicker>
+    <!-- <ejs-datepicker class="pr-3" (change)='endDateOnchange($event)' [(ngModel)]="endDate"></ejs-datepicker> -->
 
     <button class="btn btn-sm btn-secondary mr-3" (click)="reset()"><i class="fa fa-times"></i></button>
 
