update check in, check out, access control

--- a/App/src/app/views/protect-zone/access-control/access-control.component.html
+++ b/App/src/app/views/protect-zone/access-control/access-control.component.html
@@ -7,6 +7,8 @@
           <div class="w3-row w3-section ">
             <div class="w3-col" style="width:auto">
               <img src="../../../../assets/img/gif/scan.gif" style="width:150px" alt="">
+              <span class="badge badge-pill badge-danger" style="margin-right: 40px;font-size: 20px;width: 60px;">{{total}}</span>
+
             </div>
             <div class="w3-rest" style="margin-top: 16px;">
               <input [ngClass]="test" name="qrcode" class="my-form-control" autocomplete="off" autoselect [ngModel]="QRCode"
