--- a/App/src/app/views/protect-zone/check-in/check-in.component.html
+++ b/App/src/app/views/protect-zone/check-in/check-in.component.html
@@ -21,6 +21,8 @@
           <div class="w3-row w3-section" style="margin-top: 0px!important">
             <div class="w3-col" style="width:auto">
               <img src="../../../../assets/img/gif/scan.gif" style="width:150px" alt="">
+            <span class="badge badge-pill badge-danger" style="margin-right: 40px;font-size: 20px;width: 60px;">{{total}}</span>
+
             </div>
             <div class="w3-rest" style="margin-top: 16px;">
               <input [ngClass]="test" name="qrcode" class="my-form-control" autocomplete="off" autoselect [ngModel]="QRCode"
@@ -49,7 +51,11 @@
         <h2>Cho phép vào! </h2>
        </div>
     </div>
-
+    <div class="card" style="width: 60%;" *ngIf="success == 403">
+      <div class="card-body bg-danger">
+        <div [innerHTML]="message"></div>
+      </div>
+    </div>
     <div class="card" style="width: 60%;" *ngIf="success == 404">
       <div class="card-body bg-danger">
        <h2>Not found this person. No entry. <br>Please establish data in Staff info page ! </h2>
