add new page black list

--- a/App/src/app/views/protect-zone/access-control/access-control.component.html
+++ b/App/src/app/views/protect-zone/access-control/access-control.component.html
@@ -43,8 +43,8 @@
     </div>
     <div class="card" style="width: 60%;" *ngIf="success == 404">
       <div class="card-body bg-danger">
-       <h2>There's no data. Can not enter the factory.<br>Please do rapid-test.</h2>
-       <h2>Không có dữ liệu xét nghiệm. Không được vào nhà máy.<br>Vui lòng thực hiện xét nghiệm nhanh hoặc PCR.</h2>
+        <h2>Please return check out station, we need your negative result</h2>
+        <h2>Vui lòng quay lại khu vực lấy kết quả xét nghiệm, chúng tôi cần kết quả âm tính của bạn !</h2>
       </div>
     </div>
 
