--- a/App/src/app/views/protect-zone/black-list/black-list.component.html
+++ b/App/src/app/views/protect-zone/black-list/black-list.component.html
@@ -26,6 +26,7 @@
             <e-column field="code" textAlign='Center' headerText="{{ 'ID'}}"> </e-column>
             <e-column field="fullName" textAlign='Center' [allowEditing]='false' headerText="{{ 'Name'}}">  </e-column>
             <e-column field="department" textAlign='Center' [allowEditing]='false' headerText="{{ 'Department'}}"> </e-column>
+            <e-column field="createdTime" textAlign='Center' type='date' format='MM-dd-yyy HH:mm' [allowEditing]='false' headerText="{{ 'Date Time'}}"> </e-column>
           </e-columns>
         </ejs-grid>
       </div>
