--- a/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
+++ b/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
@@ -54,6 +54,7 @@
             <e-column field="expiryTime" textAlign='Center' headerText="{{ 'Entry factory exp. date'}}"> </e-column>
             <e-column field="checkInTime" textAlign='Center' headerText="{{ 'Check in time'}}"> </e-column>
             <e-column field="checkOutTime" textAlign='Center' headerText="{{ 'Check out time'}}"> </e-column>
+            <e-column field="factoryEntryTime" textAlign='Center' headerText="{{ 'Entry factory time'}}"> </e-column>
 
           </e-columns>
         </ejs-grid>
