--- a/App/src/app/views/protect-zone/report-factory/report-factory.component.html
+++ b/App/src/app/views/protect-zone/report-factory/report-factory.component.html
@@ -51,7 +51,7 @@
             <e-column field="result" textAlign='Center' headerText="{{ 'Rapid-Test result'}}"> </e-column>
             <e-column field="rapidTestTime" textAlign='Center' headerText="{{ 'Rapid-Test date'}}"> </e-column>
             <e-column field="expiryTime" textAlign='Center' headerText="{{ 'Entry factory exp. date'}}"> </e-column>
-            <e-column field="factoryEntryTime" textAlign='Center' headerText="{{ 'Entry factory  date'}}"> </e-column>
+            <e-column field="factoryEntryTime" textAlign='Center' headerText="{{ 'Entry factory time'}}"> </e-column>
 
           </e-columns>
         </ejs-grid>
