revise access days

--- a/App/src/app/views/protect-zone/check-out-setting/check-out-setting.component.html
+++ b/App/src/app/views/protect-zone/check-out-setting/check-out-setting.component.html
@@ -25,7 +25,7 @@
             </e-column>
             <e-column field="name" textAlign='Center' headerText="{{ 'Kind'}}"> </e-column>
             <e-column field="mins" textAlign='Center' headerText="{{ 'Mins'}}"> </e-column>
-            <e-column field="isDefault" textAlign='Center' headerText="{{ 'Option' | translate}}">
+            <e-column field="isDefault" textAlign='Center' headerText="{{ 'Default'}}">
               <ng-template #editTemplate let-data>
                N/A
               </ng-template>
