--- a/App/src/app/views/protect-zone/setting/setting.component.html
+++ b/App/src/app/views/protect-zone/setting/setting.component.html
@@ -1,8 +1,8 @@
 <div class="row d-flex justify-content-center">
-  <div class="col-md-6">
+  <div class="col-md-12">
     <div class="card">
       <div class="card-header">
-        <h3 class="card-title"> Today + setting days + setting hours = Entry factory expried date
+        <h3 class="card-title"> Today + setting days + setting hours = Entry factory expried date time
         </h3>
       </div>
       <div class="card-body table-responsive p-0">
@@ -24,8 +24,10 @@
               </ng-template>
             </e-column>
             <e-column field="dayOfWeek" [allowEditing]='false' textAlign='Center' headerText="{{ 'Rapid test date'}}"> </e-column>
+            <e-column field="dateTime" [allowEditing]='false' textAlign='Center' headerText="{{ 'Date'}}"> </e-column>
             <e-column field="day" textAlign='Center' headerText="{{ 'Setting days'}}"> </e-column>
             <e-column field="hours" textAlign='Center' headerText="{{ 'Setting hours'}}"> </e-column>
+            <e-column field="expiryTime" [allowEditing]='false' textAlign='Center' headerText="{{ 'Entry factory expired date time'}}"> </e-column>
 
           </e-columns>
         </ejs-grid>
