--- a/App/src/app/views/protect-zone/test-kind/test-kind.component.html
+++ b/App/src/app/views/protect-zone/test-kind/test-kind.component.html
@@ -32,7 +32,7 @@
               </ng-template>
             </e-column>
             <e-column field="name" textAlign='Center' headerText="{{ 'Name' | translate}}"> </e-column>
-            <e-column field="isDefault" textAlign='Center' headerText="{{ 'Option' | translate}}">
+            <e-column field="isDefault" textAlign='Center' headerText="{{ 'Default'}}">
               <ng-template #editTemplate let-data>
                N/A
               </ng-template>
