reive preview date time label

--- a/App/src/app/views/protect-zone/setting/setting.component.html
+++ b/App/src/app/views/protect-zone/setting/setting.component.html
@@ -27,7 +27,7 @@
             <e-column field="dateTime" [allowEditing]='false' textAlign='Center' headerText="{{ 'Date'}}"> </e-column>
             <e-column field="day" textAlign='Center' headerText="{{ 'Setting days'}}"> </e-column>
             <e-column field="hours" textAlign='Center' headerText="{{ 'Setting hours'}}"> </e-column>
-            <e-column field="expiryTime" [allowEditing]='false' textAlign='Center' headerText="{{ 'Entry factory expired date time'}}"> </e-column>
+            <e-column field="expiryTime" [allowEditing]='false' textAlign='Center' headerText="{{ 'Preview date time'}}"> </e-column>
 
           </e-columns>
         </ejs-grid>
