--- a/App/src/app/views/protect-zone/check-in-report/check-in-report.component.html
+++ b/App/src/app/views/protect-zone/check-in-report/check-in-report.component.html
@@ -42,9 +42,10 @@
             </e-column>
             <e-column field="code" textAlign='Center' [width]="80" headerText="{{ 'Code'}}"> </e-column>
             <e-column field="department" textAlign='Center' headerText="{{ 'Department'}}"> </e-column>
-            <e-column field="fullName" textAlign='Center' headerText="{{ 'FullName'}}"> </e-column>
+            <e-column field="fullName" textAlign='Left' headerTextAlign='Center' headerText="{{ 'FullName'}}"> </e-column>
             <e-column field="gender" textAlign='Center' [width]="80" headerText="{{ 'Gender'}}"> </e-column>
             <e-column field="birthDate" textAlign='Center' headerText="{{ 'Birth Date'}}"> </e-column>
+            <e-column field="kindName" textAlign='Center' headerText="{{ 'Kind'}}"> </e-column>
             <e-column field="checkInTime" textAlign='Center' headerText="{{ 'Check in time'}}"> </e-column>
             <e-column field="checkOutTime" textAlign='Center' headerText="{{ 'Check out time'}}"> </e-column>
 
