--- a/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
+++ b/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
@@ -45,12 +45,14 @@
             </e-column>
             <e-column field="code" textAlign='Center' [width]="80" headerText="{{ 'Code'}}"> </e-column>
             <e-column field="department" textAlign='Center' headerText="{{ 'Department'}}"> </e-column>
-            <e-column field="fullName" textAlign='Center' headerText="{{ 'FullName'}}"> </e-column>
+            <e-column field="fullName" textAlign='Left' headerTextAlign='Center' headerText="{{ 'FullName'}}"> </e-column>
             <e-column field="gender" textAlign='Center' [width]="80" headerText="{{ 'Gender'}}"> </e-column>
             <e-column field="birthDate" textAlign='Center' headerText="{{ 'Birth Date'}}"> </e-column>
             <e-column field="testKindId" textAlign='Center' headerText="{{ 'Test Kind'}}"> </e-column>
-            <e-column field="result" textAlign='Center' headerText="{{ 'Rapid-Test result'}}"> </e-column>
-            <e-column field="createdTime" textAlign='Center' headerText="{{ 'Rapid-Test date'}}"> </e-column>
+            <e-column field="kindName" textAlign='Center' headerText="{{ 'Kind'}}"> </e-column>
+
+            <e-column field="result" textAlign='Center' headerText="{{ 'Test result'}}"> </e-column>
+            <e-column field="createdTime" textAlign='Center' headerText="{{ 'Test date'}}"> </e-column>
             <e-column field="expiryTime" textAlign='Center' headerText="{{ 'Entry factory exp. date'}}"> </e-column>
             <e-column field="checkInTime" textAlign='Center' headerText="{{ 'Check in time'}}"> </e-column>
             <e-column field="checkOutTime" textAlign='Center' headerText="{{ 'Check out time'}}"> </e-column>
