update beep sound check in, check out, acess control

--- a/App/src/app/views/protect-zone/check-in-report/check-in-report.component.html
+++ b/App/src/app/views/protect-zone/check-in-report/check-in-report.component.html
@@ -30,6 +30,7 @@
           gridLines='Both'
           [pageSettings]='pageSettings'
           [allowExcelExport]='true'
+          [allowSorting]='true'
         >
           <e-columns>
             <e-column field="#" textAlign='Center' width="80" isPrimaryKey="true" headerText="#">
