--- a/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
+++ b/App/src/app/views/protect-zone/rapid-test-report/rapid-test-report.component.html
@@ -30,7 +30,7 @@
           [showColumnMenu]='true'
           gridLines='Both'
           [allowSorting]='true'
-
+          [allowSorting]='true'
           [pageSettings]='pageSettings'
           [allowExcelExport]='true'
         >
