--- a/App/src/app/views/protect-zone/report-factory/report-factory.component.html
+++ b/App/src/app/views/protect-zone/report-factory/report-factory.component.html
@@ -29,7 +29,7 @@
           [allowResizing]='true'
           [showColumnMenu]='true'
           gridLines='Both'
-
+          [allowSorting]='true'
           [pageSettings]='pageSettings'
           [allowExcelExport]='true'
         >
