--- a/App/src/app/views/protect-zone/staff-info/staff-info.component.html
+++ b/App/src/app/views/protect-zone/staff-info/staff-info.component.html
@@ -5,6 +5,7 @@
 <div class="row">
   <div class="col-md-12 mb-2">
     <button type="button" class="btn btn-secondary mr-2" (click)='showModal()'>Import Excel</button>
+    <button type="button" class="btn btn-secondary mr-2" (click)='showModal2()'>Import Excel 2</button>
     <button type="button" class="btn btn-secondary" [disabled]='disable' (click)='printData()'>
       <span *ngIf="loading == 0" class="spinner-border spinner-border-sm text-danger" role="status" aria-hidden="true"></span>
       <span *ngIf="loading == 0">Loading... Chờ chút nhé... </span>
@@ -66,6 +67,8 @@
                 <ejs-dropdownlist [(ngModel)]='settingId' [fields]='settingFields' placeholder='Select a kind' [dataSource]='settingData'></ejs-dropdownlist>
               </ng-template>
             </e-column>
+            <e-column field="testDate" textAlign='Center' [width]="120"  headerText="{{ 'Test Date'}}"> </e-column>
+
           </e-columns>
         </ejs-grid>
       </div>
@@ -118,8 +121,11 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <label for="Name">Select File (*Notice: Excel file must be followed a system template. If you do not have a
-            template, please <a [href]="excelDownloadUrl">click here</a> to download. Thank you!)</label>
+          <label for="Name">
+            Select File (*Notice: Excel file must be followed a system template. If you do not have a
+            template, please <a [href]="excelDownloadUrl" style="font-weight: bolder;">click here</a> to download. Thank you!)
+
+          </label>
           <input (change)="fileProgress($event)" name="file" type="file" class="form-control" />
         </div>
       </div>
@@ -130,6 +136,44 @@
 
     <button type="button" class="btn btn-primary" (click)="uploadFile()">Upload File</button>
     <button type="button" class="btn btn-danger" (click)="modal.close('Close click')">Close</button>
+  </div>
+
+</ng-template>
+
+<ng-template #import2Modal let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title">
+      <i class="fas fa-plus"></i> Import Excel 2
+    </h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="form-group">
+          <label for="Name">Select File (*Notice: Excel file must be followed a system template. If you do not have a template, please <a [href]="excel2DownloadUrl" style="font-weight: bolder;">click here</a> to download excel template without system data
+            or <a (click)='downloadExcel()' style="font-weight: bolder;color: #20a8d8; cursor: pointer;; text-decoration: none; background-color: transparent;">click here</a> to download excel file with system data. Thank you!)
+
+          </label>
+          <input (change)="fileProgress2($event)" name="file" type="file" class="form-control" />
+        </div>
+      </div>
+      <div class="col-md-12">
+        <div class="progress form-group" *ngIf="progress > 0" style="height:30px; font-size:20px">
+          <div class="progress-bar progress-bar-striped bg-success" role="progressbar" [style.width.%]="progress" >
+            Chờ chút nhé. Hệ thống đang xử lý dữ liệu. Sẽ mất 1 vài phút để hoàn thành công việc này...
+          </div>
+      </div>
+      </div>
+    </div>
+
+  </div>
+  <div class="modal-footer">
+
+    <button type="button" class="btn btn-primary" (click)="submitUser()">Upload File</button>
+    <button type="button" class="btn btn-danger" *ngIf="showClose" (click)="modal.close('Close click')">Close</button>
   </div>
 
 </ng-template>
