--- a/App/src/app/views/protect-zone/black-list/black-list.component.html
+++ b/App/src/app/views/protect-zone/black-list/black-list.component.html
@@ -20,7 +20,7 @@
           [sortSettings]='sortSettings'
         >
           <e-columns>
-            <e-column field="#" textAlign='Center' width="80"  [allowEditing]='false' headerText="#">
+            <e-column field="number" textAlign='Center' width="80"  [allowEditing]='false' headerText="#">
               <ng-template #template let-data>
                 {{NO(data.index)}}
               </ng-template>
