--- a/App/src/app/views/protect-zone/check-in/check-in.component.html
+++ b/App/src/app/views/protect-zone/check-in/check-in.component.html
@@ -41,6 +41,7 @@
       <div class="card-body bg-success" *ngIf="!switchColor">
        <h2>HỌ TÊN: {{fullName}}</h2>
        <h2>SỐ THẺ: {{QRCode}}</h2>
+       <h2>ĐỊNH KỲ: {{employeeData.testDate}}</h2>
        <h2>Arrive & Recorded successfully</h2>
        <h2>Cho phép vào! </h2>
        <div [innerHTML]="message"></div>
@@ -48,6 +49,7 @@
       <div class="card-body bg-info" *ngIf="switchColor">
         <h2>HỌ TÊN: {{fullName}}</h2>
         <h2>SỐ THẺ: {{QRCode}}</h2>
+        <h2>ĐỊNH KỲ: {{employeeData.testDate}}</h2>
         <h2>Arrive & Recorded successfully</h2>
         <h2>Cho phép vào! </h2>
         <div [innerHTML]="message"></div>
